<resources>
    <string name="app_name">MovieMania</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    
<!-- Menu Strings -->
    <string name="sort_by">Sort By</string>
    <string name="sort_by_popularity">Popularity</string>
    <string name="sort_by_rating">Rating</string>

    <!-- Detail Activity -->
    <string name="movie_title">Mad Max: Fury Road</string>
    <string name="movie_release_date">2015-05-15</string>
    <string name="movie_avg_rating">7.9</string>
    <string name="movie_total_rating">/10</string>
    <string name="movie_vote_count">Vote Count: 815</string>
    <string name="movie_plot_summary">Plot Summary</string>
    <string name="movie_summary">An apocalyptic story set in the furthest reaches of our planet, in a stark desert landscape where humanity is broken, and most everyone is crazed fighting for the necessities of life. Within this world exist two rebels on the run who just might be able to restore order. There\'s Max, a man of action and a man of few words, who seeks peace of mind following the loss of his wife and child in the aftermath of the chaos. And Furiosa, a woman of action and a woman who believes her path to survival may be achieved if she can make it across the desert back to her childhood homeland.</string>

</resources>
